# langchain-gemini-sample

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
sample-prj/: .pre-commit-config.yaml  pyproject.toml  requirements.txt  requires.txt
sample-prj/docs/design/: design_document.md
sample-prj/notebook/: Untitled.ipynb
sample-prj/src/: agent.py  cag.py  embedding_sample.py  multimodal_rag.py  rag_agent.py  rag_tutorial.py  rag_web_sample.py  search_web_agent.py
sample-prj/src/data/: onsen_data.json
sample-prj/src/data/text/: MAFF.md
sample-prj/src/multimodal-rag/: import_data_to_vector_store.py  rag_functions.py  retreaver.py  summarize_images_with_gemini.py
